--- a/jairell/index.html
+++ b/jairell/index.html
@@ -60,7 +60,7 @@
     <div class="section b4">
         <br>
         <h1>Our Donors</h1>
-        <p>The JaiRell Experience is proud to have MyBraincells.cf as the priciple sponsor for our series. Go to MyBraincells.cf, or click below, for expertly crafted jokes on a state-of-the-art website.</p>
+        <p>The JaiRell Experience is proud to have MyBraincells.cf as the principle sponsor for our series. Go to MyBraincells.cf, or click below, for expertly crafted jokes on a state-of-the-art website.</p>
         <a href="https://mybraincells.cf/" style="color: black;"><p class="link">My Braincells >>></p></a>
         <div style="text-align: center;">
             <img src="https://mybraincells.cf/braincells.jpg" width="300px">
