--- a/tnc.html
+++ b/tnc.html
@@ -14,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onclick="birth(0)">
+    <canvas></canvas>
     <a href="index.html"><img src='assets/iconR-01.png' class="icon small"></a>
     <br>
     <div class="article">
@@ -79,3 +80,4 @@
 </html>
 <script src="footer.js"></script>
 <script src="textScripts.js"></script>
+<script src="canvas.js"></script>
