--- a/gossips/index.html
+++ b/gossips/index.html
@@ -77,13 +77,13 @@
             <div class="img">
                 <img src="unnamed.jpg">
             </div>
-            <p>Argentinian, Spanish, Mediterranean Cuisine. Charcoal Grill.</p>
+            <p>Argentinian, Spanish, and Mediterranean Cuisine. Charcoal Grill.</p>
         </div>
 
         <div class="content joke">
             <p>Did you hear about the guy they found dead at the Mediterranean restaurant?</p>
             <hr>
-            <p>Police are calling is a homous-cide.</p>
+            <p>Police are calling it a homous-cide.</p>
         </div>
 
         <!-- <div class="content">
