--- a/changelog.html
+++ b/changelog.html
@@ -29,10 +29,16 @@
 
 <script>
     changes = [
+        // {
+        //     change: 'Balls Update',
+        //     date: 'TBD',
+        //     description: 'Added 3 new projects to jaimatthews.cf/balls. They are:',
+        //     important: false
+        // },
         {
-            change: 'Balls Update',
-            date: 'TBD',
-            description: 'Added 3 new projects to jaimatthews.cf/balls. They are:',
+            change: 'Gravity!',
+            date: '29 Oct, 2023',
+            description: "My Computer Science 2023 Major Project has been added to my website! Gravity is a physics simulation running in pure JavaScript. Give it a go! See what you findings you can observe!",
             important: false
         },
         {
