--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
                     img_top: false,
                 },
                 {
+                    title: 'Gravity',
+                    subt: 'Physics Simulation',
+                    date: 'Oct 2023',
+                    href: 'gravity',
+                    category: '_game',
+                    img: 'gravity/assets/gi1.png',
+                    img_top: true,
+                },
+                {
                     title: 'Horse',
                     subt: 'Web-Based game',
                     date: 'Coming Soon',
