Quick Logo fix to Gravity

--- a/gravity/index.html
+++ b/gravity/index.html
@@ -31,7 +31,7 @@
         </div></a>
         <a href="about AT3.pdf" target="_blank"><div class="option">
             <img src="assets/gi3.png">
-            <p style="color: white;">About</p>
+            <p>About</p>
         </div></a>
     </div>
     
