--- a/countdown/main.html
+++ b/countdown/main.html
@@ -25,7 +25,7 @@
         width: 200px;
         border-radius: 30px;
         position: absolute;
-        top: 45%;
+        top: 60%;
         left: 50%;
         transform: translate(-50%, -50%);
         cursor: pointer;
@@ -61,6 +61,18 @@
         font-size: 10px;
         padding-right: 20px;
     }
+    .textShadow {
+        text-shadow: 
+        1px 0px 0px white,
+        0.7px -0.7px 0px white,
+        0px -1px 0px white,
+        -0.7px -0.7px 0px white,
+        -1px 0px 0px white,
+        -0.7px 0.7px 0px white,
+        0px 1px 0px white,
+        0.7px 0.7px 0px white
+        ;
+    }
 </style>
 <body>
     <div class="string" onclick="Toggle()">
@@ -68,8 +80,9 @@
         <p id="string" class="maintext"></p>
         <p class="subtext" id="subtext">Seconds Remaining</p>
     </div>
-    <p class="home"><a style="color: black;" href="index.html">Home</a></p>
-    <p class="info" id="info">Hello</p>
+    <p class="home textShadow"><a style="color: black;" href="index.html">Home</a></p>
+    <p class="info textShadow" id="info">Hello</p>
+    
 </body>
 </html>
 <script>
