Documents Page Added!
This links to the shows page, books page, article guide page (this one may be temporary), and SMO speed-run page.

More docs to come soon!

It's also nice to have another site in the misc. category.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
                     img_top: true,
                 },
                 {
+                    title: 'Documents',
+                    subt: 'Miscellaneous online documents',
+                    date: 'Jun 2020 - Present',
+                    href: 'docs',
+                    category: '_misc',
+                    img: 'assets/docs.jpg',
+                    img_top: false,
+                },
+                {
                     title: 'Illustrations',
                     subt: 'Series of landscape artworks',
                     date: 'Dec 2020 - Dec 2021',
