--- a/shows/index.html
+++ b/shows/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<title>TV Shows</title>
-<link rel="icon" type="image/x-icon" href="../assets/iconR-01.png">
-<html>
-<iframe src="
-https://docs.google.com/spreadsheets/d/e/2PACX-1vTVTSLNrPEGkzHPrEcu0L0xP_MQhkVqrskUR8spt-tcipz8U7wJoQ0ioilrpHRBOv_IrUYciRCkbY93/pubhtml?widget=false&amp;headers=false
-" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Your browser doesn't support iframes
-</iframe>
-</html>
+<p>This spreadsheet has been moved.</p>
+<p>The new location is jaimatthews.cf/docs/shows</p>
+<a href="../docs/shows.html"><button>Redirect</button></a>
+<p>This redirect will not always be available so please note the new address.</p>
+<p>Enjoy!</p>
