Changelog for previous
Changelog for documents.

--- a/changelog.html
+++ b/changelog.html
@@ -36,6 +36,12 @@
         //     important: false
         // },
         {
+            change: 'Documents Site',
+            date: '14 Nov, 2023',
+            description: "I added a 'documents' page in the Misc. section. It features a couple of spreadsheets a simple speedrunning tool I made a few months ago. Essentially it's a portal to things I wouldn't usually make publicly available, but would still put on the website. It's there for the sake of convenience.",
+            important: false
+        },
+        {
             change: 'Gravity!',
             date: '29 Oct, 2023',
             description: "My Computer Science 2023 Major Project has been added to my website! Gravity is a physics simulation running in pure JavaScript. Give it a go! See what you findings you can observe!",
