--- a/index.html
+++ b/index.html
@@ -205,3 +205,4 @@
 <script src="footer.js"></script>
 <script src="homeScripts.js"></script>
 <script src="canvas.js"></script>
+<script src="cookies.js"></script>
