--- a/changelog.html
+++ b/changelog.html
@@ -158,6 +158,7 @@
     }
 
 </script>
+<script src="cookies.js"></script>
 <script src="footer.js"></script>
 <script src="textScripts.js"></script>
 <script src="canvas.js"></script>
