--- a/docs.html
+++ b/docs.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Documents | Jai Matthews</title>
-    <link rel="icon" type="image/x-icon" href="../assets/iconR-01.png">
+    <link rel="icon" type="image/x-icon" href="assets/iconR-01.png">
 
-    <link rel="stylesheet" href="../stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -20,13 +20,13 @@
 <body>
     <div class="docsBody">
         <div class="docsHead">
-            <a href="../index.html"><img src="../assets/iconR-01.png"></a>
+            <a href="index.html"><img src="assets/iconR-01.png"></a>
             <h1>Documents</h1>
             <p>This is a fairly new page on my website. In the past, some of the following have been online but inaccessible without the link. Now, they are here. For some reason. Enjoy!</p>
         </div>
         <div class="docsList">
         </div>
-        <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"></i> <a href="../index.html">Return Home</a></p>
+        <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"></i> <a href="index.html">Return Home</a></p>
     </div>
     
 </body>
@@ -38,22 +38,22 @@
     documents = [
         {
             title: 'TV Show Rankings',
-            link: 'shows.html',
+            link: 'docs/shows.html',
             icon: 'excel',
         },
         {
             title: 'Books Spreadsheet',
-            link: 'books.html',
+            link: 'docs/books.html',
             icon: 'excel',
         },
         {
             title: 'Super Mario Odyssey Timer',
-            link: 'smo.html',
+            link: 'docs/smo.html',
             icon: 'code',
         },
         {
             title: 'JM Article DevGuide',
-            link: '../_TEXTDEMO.html',
+            link: '_TEXTDEMO.html',
             icon: 'text',
         },
     ]
@@ -71,5 +71,6 @@
     }
 
 </script>
-<script src="../footer.js"></script>
-<script src="../textScripts.js"></script>
+<script src="cookies.js"></script>
+<script src="footer.js"></script>
+<script src="textScripts.js"></script>
