--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     title: 'Documents',
                     subt: 'Miscellaneous online documents',
                     date: 'Jun 2020 - Present',
-                    href: 'docs',
+                    href: 'docs.html',
                     category: '_misc',
                     img: 'assets/docs.jpg',
                     img_top: false,
