--- a/_TEXTDEMO.html
+++ b/_TEXTDEMO.html
@@ -38,6 +38,7 @@
     </div>
 </body>
 </html>
+<script src="cookies.js"></script>
 <script src="footer.js"></script>
 <script src="textScripts.js"></script>
 <script src="canvas.js"></script>
