--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
     </div>
 </body>
 </html>
+<script src="cookies.js"></script>
 <script src="footer.js"></script>
 <script src="textScripts.js"></script>
 <script src="canvas.js"></script>
