--- a/illustrations.html
+++ b/illustrations.html
@@ -55,6 +55,7 @@
     </div>
 </body>
 </html>
+<script src="cookies.js"></script>
 <script src="footer.js"></script>
 <script src="textScripts.js"></script>
 <script>
