--- a/rp.html
+++ b/rp.html
@@ -159,6 +159,7 @@
     </div>
 </body>
 </html>
+<script src="cookies.js"></script>
 <script src="footer.js"></script>
 <script src="textScripts.js"></script>
 <script src="canvas.js"></script>
