Cookies Done, Dark Mode Added
Cookies are now working and they allow you to access dark mode, which has also been added.

--- a/changelog.html
+++ b/changelog.html
@@ -36,6 +36,12 @@
         //     important: false
         // },
         {
+            change: 'Dark Mode & Cookies!',
+            date: '16 Nov, 2023',
+            description: "I re-added dark mode to the website. Just use the toggle in the footer. In addition, it uses a far more elegant system than my last website; cookies! Yes, that's right, the website now has cookies. This has been added to the TOS.",
+            important: true
+        },
+        {
             change: 'Documents Site',
             date: '14 Nov, 2023',
             description: "I added a 'documents' page in the Misc. section. It features a couple of spreadsheets a simple speedrunning tool I made a few months ago. Essentially it's a portal to things I wouldn't usually make publicly available, but would still put on the website. It's there for the sake of convenience.",
