--- a/tnc.html
+++ b/tnc.html
@@ -22,6 +22,8 @@
         <h1>Terms & Conditions</h1>
         <h2>jaimatthews.cf</h2>
         <!-- <p>Body text.</p> -->
+        <h3>Cookies</h3>
+        <p>To store preferences for light mode/ dark mode, this website uses cookies. It's just a simple string stating 'dark=true/false' saved client side. By using this website you consent to such cookies being stored. Cookies for this website are cleared every time you close the browser, so you won't need to worry about them sticking around for long. The website will work in its entirety if you have cookies disabled, but you will not be able to switch between light mode & dark mode.</p>
         <h3>You are liable for any injuries.</h3>
         <p>Any injuries that you incur whilst using the Jai Matthews website are not the fault of Jai Matthews or anyone associated with Jai Matthews. Such injuries include, but are not limited to:</p>
         <ul>
