Illustrations Page Update

--- a/changelog.html
+++ b/changelog.html
@@ -35,6 +35,19 @@
         //     description: 'Added 3 new projects to jaimatthews.cf/balls. They are:',
         //     important: false
         // },
+                // {
+        //     change: "",
+        //     date: "XX MMM YYYY",
+        //     description: "",
+        //     important: false
+        // },
+
+        {
+            change: 'New Illustrations Page',
+            date: '21 Dec, 2023',
+            description: 'Illustrations page now has better hover effects & shows entry numbers. It also uses the Instagram Display API to fetch all illustrations from my instagram account.',
+            important: false
+        },
         {
             change: 'Various Changes',
             date: '18 Dec, 2023',
