--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                 },
                 {
                     title: 'Illustrations',
-                    subt: 'Series of landscape artworks',
-                    date: 'Dec 2020 - Dec 2021',
+                    subt: 'Series of artworks',
+                    date: 'Dec 2020 - Present',
                     href: 'illustrations.html',
                     category: '_misc',
                     img: 'assets/illustrations/17.png',
